StageOrderedWritesToBucketCatalog populates errors vectors for all measurements even when it shouldn't

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • Storage Execution 2025-03-31
    • None
    • 3
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If we encounter an error at measurement n while attempting to stage ordered writes to the bucket catalog, we populate the errors vector for all measurements after and including n. This is done here. However, this is a change from the existing behavior where we would only populate the errors vector with the error for the nth measurement (here, here).

      This will cause existing tests like `bulk_write_timeseries_basic.js` to fail.

      We only populate the nth measurement and all subsequent measurements when encountering a staging error in the ordered path if we fail while trying to acquire the collection (here, here)

            Assignee:
            Matt Kneiser
            Reporter:
            Damian Wasilewicz
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: