SERVER-102466 Refactor error filling and only populate one for ordered writes (#33723)

GitOrigin-RevId: 362d1fedf79160e33d358d8234648e0544269e75